# Yoink

./: .gitignore  CMakeLists.txt  README.md
src/: downloader.cpp  downloader.hpp  extractor.cpp  extractor.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.rc
